giving user message if we are not referring to the posts

--- a/posts/templates/posts/home.html
+++ b/posts/templates/posts/home.html
@@ -6,9 +6,18 @@
      <title>Blog Home Page</title>
  </head>
  <body>
-    {% for post in posts %}
-    <a  href = ""><h1>{{post.title}}</h1></a>
-    <p>{{post.content}}</p>
-    {% endfor %}
+    {% if posts%}
+
+
+        <h1>All posts available </h1>
+        {% for post in posts %}
+        <a  href = ""><h1>{{post.title}}</h1></a>
+        <p>{{post.content}}</p>
+        {% endfor %}
+    {% else %}
+    <h1> No Posts Available</h1>
+{% endif%}
+
+   
  </body>
  </html>   
