--- a/posts/templates/posts/home.html
+++ b/posts/templates/posts/home.html
@@ -6,11 +6,10 @@
      <title>Blog Home Page</title>
  </head>
  <body>
-  
-        {% for post in posts %}
-         
-        <a  href = ""><h1>{{forloop.counter}} - {{post.title}}</h1></a>
-        <p>{{post.content}}</p>
+        <h1>{{username|capfirst|truncatechars:5}}</h1>
+        {% for post in posts %}        
+        <a  href = ""><h1>{{forloop.counter}} - {{post.title|title}}</h1></a>
+        <p>{{post.content|truncatewords:5}}</p>
         {% endfor %}
    
 
