--- a/posts/templates/posts/home.html
+++ b/posts/templates/posts/home.html
@@ -1,19 +1,9 @@
-<!DOCTYPE html>
- <html lang="en">
- <head>
-     <meta charset="UTF-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>Blog Home Page</title>
- </head>
- <body>
-        <h1>{{username|capfirst|truncatechars:5}}</h1>
-        {% for post in posts %}        
-        <a  href = ""><h1>{{forloop.counter}} - {{post.title|title}}</h1></a>
+{%extends "base.html" %}
+        <h1>{{username|capfirst|truncatechars:4}}</h1>
+        {% for post in posts %}     
+        <a  href = "{% url 'post'  post.id  %}"><h1>{{forloop.counter}} - {{post.title|title}}</h1></a>
         <p>{{post.content|truncatewords:5}}</p>
         {% endfor %}
    
 
    
-   
- </body>
- </html>   
