--- a/posts/templates/posts/home.html
+++ b/posts/templates/posts/home.html
@@ -1,9 +1,18 @@
-{%extends "base.html" %}
-        <h1>{{username|capfirst|truncatechars:4}}</h1>
+{%extends "base.html" %}  
+{% load static %}
+{% block css %}
+    <link rel="stylesheet" href="{% static 'posts/home.css' %}">
+{% endblock css %}
+{% block body %}
+
+    <h1>{{username|capfirst|truncatechars:4}}</h1>
         {% for post in posts %}     
-        <a  href = "{% url 'post'  post.id  %}"><h1>{{forloop.counter}} - {{post.title|title}}</h1></a>
-        <p>{{post.content|truncatewords:5}}</p>
+            <a  href = "{% url 'post'  post.id  %}"><h1>{{forloop.counter}} - {{post.title|title}}</h1></a>
+            <p>{{post.content|truncatewords:5}}</p>
+        {% empty %}
+            <h1>No Posts Available</h1>
         {% endfor %}
+{% endblock body %} 
    
 
    
