--- a/posts/templates/posts/post.html
+++ b/posts/templates/posts/post.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
-   
+  {% load static %} 
+{% block css %}
+    <link rel="stylesheet" href="{% static 'posts/post.css' %}">
+{% endblock css %}
 {% block title %}Post.html{% endblock title%}
 {% block body %}
     <h1> {{ post_dict.title}}</h1>
