--- a/posts/templates/base.html
+++ b/posts/templates/base.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
+{% load static %}
  <html lang="en">
  <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>{% block title %}{% endblock title%}</title>
-     {% block css%}{% endblock css %}
+     
+     {% block css%}
+     {% load static %} 
+     {% endblock css %}
+     <link rel="stylesheet"  href="{% static 'style.css' %}">
  </head>
  <body>
         <nav>
